--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node ./bin/www.js",
+    "start": "pm2 start ./bin/www.js",
+    "stop": "pm2 delete all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
